--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "connect-core",
+  "name": "gatsby-theme-connect-core",
   "version": "1.0.0",
   "private": true,
-  "description": "connect-core",
+  "description": "gatsby-theme-connect-core",
   "author": "Chris Miller (Chrxs)",
   "keywords": [
     "gatsby"
   ],
+  "main": "gatsby-config.js",
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
@@ -18,6 +19,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mdx-js/react": "^1.6.22",
+    "@theme-ui/mdx": "^0.15.3",
     "gatsby": "^4.24.6",
     "gatsby-plugin-google-analytics": "^4.24.0",
     "gatsby-plugin-image": "^2.24.0",
@@ -29,5 +31,11 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "theme-ui": "^0.15.3"
+  },
+  "peerDependencies": {
+    "gatsby": "^4.24.7"
+  },
+  "devDependencies": {
+    "gatsby-plugin-root-import": "^2.0.8"
   }
 }
